package org.example.GyarFactory;

import org.example.Gyar.GyarTer;

public interface GyarF {
    static GyarTer keszitGyarTer(GyarTerType type, String id) {
        return null;
    }
}
