package org.example.Menedzsment;

import org.example.Termek.Termek;

public interface Figyelo {
    void update(Termek termek, int ujMennyiseg);
}
