package org.example.RaktarFactory;

import org.example.Gyar.GyarTer;
import org.example.GyarFactory.GyarTerType;
import org.example.Raktar.RaktarTer;

public interface RaktarF {
    static RaktarTer keszitRaktarTer(RaktarTerType type, String id) {
        return null;
    }
}
