package org.example.Rendeles;

import org.example.Termek.Termek;

public interface Rendeles {
    void megrendel(Termek termek) throws Exception;
    void visszavon(Termek termek);
}
