package org.example.VevoFactory;
import org.example.Vevo.Vevo;

public interface VevoF {
    static Vevo keszitVevo(VevoType type, String id) {
        return null;
    }
}
